--- a/index.html
+++ b/index.html
@@ -13,16 +13,24 @@
     <meta name="application-name" content="Blackboyscode">
     <meta name="msapplication-TileColor" content="#6fb43f">
     <meta name="msapplication-config" content="/assets/img/browserconfig.xml">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="styles.css" />
+    <meta name="theme-color" content="#ffffff"><link rel="stylesheet" href="styles.css" />
     <title>Pokémon HTML Challenges | Black Boys Code</title>
   </head>
   <body>
+  <main>cat</main>
     <header>
-        <h1>Hello Kanto</h1>
+        <h1>Hello Nimi</h1>
     </header>
-    <body>
-
+   <main>
+    <ul>
+      <li>
+        kitty
+        <img src="https://hips.hearstapps.com/hmg-prod/images/cat-quotes-1543599392.jpg?crop=1.00xw:0.759xh;0,0&resize=1200:*">
+      </li>
+pupppy
+<img
+    </ul>
+   </main>
     </body>
     <footer>
 
